cc: Fix failing layer tree tests

LayerTreeHostContextTestLayersNotified was changed recently to attach
root layer after first activation, but it does a static_cast on impl
layers before the layers are propagated to impl tree.

Bug: 903931
Change-Id: I824a5fe5f9915156090098f7c8b2306c32a9db23
Reviewed-on: https://chromium-review.googlesource.com/c/1330722
Commit-Queue: Sunny Sachanandani <sunnyps@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Reviewed-by: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607070}
Former-commit-id: 0c193dc52f15d3173ae5ff07cf48aff260f1717d